# Neuroject

./: .gitignore  DEVELOPMENT.md  README.md  flake.nix  main.py  pyproject.toml  run-example.sh
src/: main.py
src/neuroject/: __init__.py  main.py
